--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
 			        <div id="code">
 			      <font color="#0000FF"><span class="say">Mening bo`lgusi sevgilimga♥</span><br>
 						<span class="say"> </span><br>
-						<span class="say">bo`lsu!</span><br>
+						<span class="say">sani sevaman!</span><br>
                         <span class="say"></span> Ajoyib baxt♥♥♥<br>
 						<span class="say">abadiy muhabbat   !</span><br>
 						<span class="say">cheksiz quvonch, mexr-oqibat !</span><br>
@@ -249,7 +249,7 @@
 	
 <div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';">
 
-<p>Tug'ilgan kuning bilan <a href="#" target="_blank">sani sevaman jonim♥</a></p>
+<p>mexribon go`zal sevgilimga <a href="#" target="_blank">sani sevaman farishtam♥</a></p>
 </div>
 </body>
 </html>
