--- a/index.htm
+++ b/index.htm
@@ -34,10 +34,10 @@
 						<span class="say">kotarinki kayfiyat xamrox bo'lsin !</span><br>
 						<span class="say">Sog'lik-salomatlik, doimiy faollik va izchillik,</span><br>
                         <span class="say"><span class="say">o'z qadrini biladigan;*) </span><br>
-						<span class="say">misli ko‘rilmagan go`zallik tligan holda♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥</span><br>
+						<span class="say">misli ko‘rilmagan go`zallik tilagan holda♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥♥</span><br>
 						<span class="say">seni chindan va abadiy sevaman</span><br>
 						<span class="say">sendan bitta iltimosim shuki menga ishon ,</span><br>
-						<span class="say">  men bilan birga bo`lgin  </span><br>
+						<span class="say">  men bilan birga bo`lgin atigi ☺️♥️umrbotga </span><br>
                         <span class="say">sani sevaman malikam♥♥♥ </span><br>
                         <span class="say"> </span><br>
                         <span class="say"><span class="space"></span> -- Seni qattiq sevuvchi inson --</span><br><br>
